--- a/index.html
+++ b/index.html
@@ -9,71 +9,49 @@
 
 <div class="reveal">
     <div class="slides">
-        <section>
-            <h1 class="mb-8">
-                Presentation Template
-            </h1>
-
-            <p>
-                Test template; please ignore
-            </p>
-        </section>
-
-        <section>
-            <div class="flex justify-between items-center">
-                <div class="w-64 fragment" data-fragment-index="1">
-                    <img src="images/octocat.png" alt="Octocat" class="w-full">
+        <section data-background-image="./images/cyber-attacks-in-countries-67267-pixahive.jpg">
+            <section>
+                <div class="grid grid-cols-3 place-items-center h-screen w-full">
+                    <h1 class="col-start-2 titlecard">
+                        Template
+                    </h1>
+                    <div class="col-start-3 justify-self-end photo-attribution"><a
+                            href="https://pixahive.com/photo/increasing-cyber-attacks/">Increasing
+                            Cyber Attacks</a> by <a href="https://pixahive.com/portfolio/hardik-pandey/">Hardik
+                            Pandey</a> / <a
+                            href="https://creativecommons.org/share-your-work/public-domain/cc0/">CC0</a></div>
                 </div>
 
-                <div class="w-2/5">
-                    <img src="images/chris.jpg" alt="Chris Kankiewicz" class="rounded-full shdow w-full" >
+            </section>
+            <section>
+                <div class="slide-frame">
+                    <h2 class="slide-title">Hello There</h2>
+                    <p>reveal.js enables you to create beautiful interactive slide decks using HTML. This presentation
+                        will show you examples of what it can do.
+                    </p>
+
+                        \[
+                        \int_0^\infty x dx = \infty
+                        \]
+
+                    <ul style="column-count: 2;">
+                        <li>A</li>
+                        <li>Double</li>
+                        <li>Column</li>
+                        <li>List</li>
+                        <li>Of</li>
+                        <li>Items!</li>
+                    </ul>
                 </div>
-
-                <div class="w-64 fragment" data-fragment-index="2">
-                    <img src="images/twitter.svg" alt="Twitter" class="w-full">
+            </section>
+            <section>
+                <div class="slide-frame">
+                    <h2 class="slide-title">Syntax Highlighting</h2>
+                    <pre><code data-trim data-line-numbers class="haskell">
+                    main :: IO ()
+                    main = putStrLn "Hello, World!"
+                    </code></pre>
                 </div>
-            </div>
-
-            <div class="flex justify-between items-center">
-                <p class="w-64 fragment" data-fragment-index="1">PHLAK</p>
-                <h2 class="w-2/5">Chris Kankiewicz</h2>
-                <p class="w-64 fragment" data-fragment-index="2">@PHLAK</p>
-            </div>
-        </section>
-
-        <section>
-            <section>
-                <h1>Section One</h1>
-            </section>
-
-            <section>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Delectus soluta ratione possimus dolorum neque, nihil, sint
-                    dolor iusto ullam omnis asperiores recusandae labore.
-                    Cupiditate repudiandae, rem aliquid dolores perferendis
-                    voluptates.
-                </p>
-            </section>
-        </section>
-
-        <section>
-            <section>
-                <h1>References</h1>
-            </section>
-
-            <section >
-                <p>
-                    <a href="https://revealjs.com" target="_blank">
-                        https://revealjs.com
-                    </a>
-                </p>
-
-                <p>
-                    <a href="https://tailwindcss.com" target="_blank">
-                        https://tailwindcss.com
-                    </a>
-                </p>
             </section>
         </section>
     </div>
