Update packages; point webpack to local directory

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 <title>Presentation Template</title>
 
-<link rel="stylesheet" href="dist/deck.css">
+<link rel="stylesheet" href="./dist/deck.css">
 
 <div class="reveal">
     <div class="slides">
@@ -30,9 +30,9 @@
                         will show you examples of what it can do.
                     </p>
 
-                        \[
-                        \int_0^\infty x dx = \infty
-                        \]
+                    \[
+                    \int_0^\infty x dx = \infty
+                    \]
 
                     <ul style="column-count: 2;">
                         <li>A</li>
@@ -57,4 +57,4 @@
     </div>
 </div>
 
-<script src="dist/deck.js"></script>
+<script src="./dist/deck.js"></script>
